web-infras/parser/tests/fixtures/babel/es2015/yield/function-name-strict/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (2,10)
2|function yield() {}
 |        ^
[SyntaxError]: unexpect keyword in strict mode (2,10)
2|function yield() {}
 |        ^
